--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
-    "sequelize": "^6.37.4"
+    "sequelize": "^6.37.4",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
